--- a/www.nass.gov.ng/76593837644a84e097fbfc23267bf9061e8f9e26.yml
+++ b/www.nass.gov.ng/76593837644a84e097fbfc23267bf9061e8f9e26.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 13:50:01 GMT
+    - Tue, 27 Mar 2018 18:12:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U7PguZjz4A%2CkfR6Rp%2Ck0e2; path=/
+    - PHPSESSID=AdOUrsBMRqJxP8BFzN7Hf2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 13:50:01 GMT
+recorded_at: Tue, 27 Mar 2018 18:12:58 GMT
