--- a/www.nass.gov.ng/9c9c59a133490bd66ecc0787e95605a29a197f20.yml
+++ b/www.nass.gov.ng/9c9c59a133490bd66ecc0787e95605a29a197f20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 14:02:55 GMT
+    - Tue, 27 Mar 2018 18:24:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2LGvUysZVh9x1yW%2CcSYeR0; path=/
+    - PHPSESSID=z7GNRtoDNleNempjjc-5x2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 14:02:55 GMT
+recorded_at: Tue, 27 Mar 2018 18:24:44 GMT
