--- a/www.nass.gov.ng/67c50a28ca95eec9376d51cb73829a29fcc6f1ca.yml
+++ b/www.nass.gov.ng/67c50a28ca95eec9376d51cb73829a29fcc6f1ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 14:32:57 GMT
+    - Tue, 27 Mar 2018 18:54:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eA%2CU8BPP4jsI5JJ4mogXf0; path=/
+    - PHPSESSID=CkRaC5I82a-tzpS2HkAeh0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 14:32:57 GMT
+recorded_at: Tue, 27 Mar 2018 18:54:56 GMT
