--- a/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
+++ b/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 14:33:33 GMT
+    - Tue, 27 Mar 2018 18:56:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NhwP4REcA%2CUWGANdV8v9k2; path=/
+    - PHPSESSID=WgD01IPATrvQswB1AtTy31; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 14:33:33 GMT
+recorded_at: Tue, 27 Mar 2018 18:56:17 GMT
