--- a/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
+++ b/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 14:52:37 GMT
+    - Tue, 27 Mar 2018 19:16:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=STEBTe0lIxi6NbMQRZ%2Cql2; path=/
+    - PHPSESSID=6bLwe60An6Oa3Fnd1l7Fk0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 14:52:37 GMT
+recorded_at: Tue, 27 Mar 2018 19:16:15 GMT
